[package]
name = "kv_store"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
repository = "https://github.com/TotalKrill/kv_store.git"
license = "MIT"
description = "Trait for working with key value storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
impl = ["dep:parking_lot"]

[dependencies]
async-trait = "0.1.74"

[dependencies.parking_lot]
version = "0.12.1"
optional = true

[dev-dependencies.tokio]
version = "1"
features = ["full"]
